2009-07-16  Csaba Nemethi <csaba.nemethi@t-online.de>

	* scripts/tablelistBind.tcl:   Added support for the native "Aqua-blue"
	* scripts/tablelistThemes.tcl: background, set for the header label of
	* scripts/tablelistUtil.tcl:   the sort column (for Mac-Tk with Cocoa).
	* scripts/tablelistWidget.tcl:

	* scripts/tclIndex: Newly generated.

2009-06-07  Csaba Nemethi <csaba.nemethi@t-online.de>

	* scripts/tablelistBind.tcl: Corrected a typo.

2009-05-29  Csaba Nemethi <csaba.nemethi@t-online.de>

	* scripts/tablelistWidget.tcl: Fixed a bug related to the -listvariable
	  option in disabled state.

2009-05-05  Csaba Nemethi <csaba.nemethi@t-online.de>

	* scripts/tablelistEdit.tcl: Small correction.

2009-05-03  Csaba Nemethi <csaba.nemethi@t-online.de>

	* scripts/tablelistBind.tcl: Improvements in the binding scripts
	* scripts/tablelistEdit.tcl: related to interactive cell editing.

2009-05-02  Csaba Nemethi <csaba.nemethi@t-online.de>

	* *.tcl:         Bumped the version number to 4.11.2.
	* COPYRIGHT.txt:

	* scripts/tablelistBind.tcl: Improvements in the binding scripts
	* scripts/tablelistEdit.tcl: related to interactive cell editing.

2009-04-11  Csaba Nemethi <csaba.nemethi@t-online.de>

	* scripts/tablelistEdit.tcl: Fixed a small bug related to interactive
	  cell editing with the aid of a text widget.

	* doc/tablelistWidget.html: Minor correction.

2009-03-28  Csaba Nemethi <csaba.nemethi@t-online.de>

	* tablelistPublic.tcl:         Added the labeltag subcommand and the
	* scripts/mwutil.tcl:          helper command
	* scripts/tablelistBind.tcl    tablelist::getTablelistColumn.
	* scripts/tablelistConfig.tcl:
	* scripts/tablelistUtil.tcl:
	* scripts/tablelistWidget.tcl:

	* scripts/tclIndex: Newly generated.

	* doc/tablelistBinding.html:   Updated to reflect the new features.
	* doc/tablelistWidget.html:

2009-03-14  Csaba Nemethi <csaba.nemethi@t-online.de>

	* *.tcl:         Bumped the version number to 4.11.1.
	* COPYRIGHT.txt:
